welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: ';' expected but ')' found.
    setCouleurBrosse(couleurs((i + decalage) % couleurs.length)))
                                                                ^